Se agregan links sobre ultimos temas clase Funciones

--- a/maths-for-ai/4_Funciones/Funciones_extra_info.ipynb
+++ b/maths-for-ai/4_Funciones/Funciones_extra_info.ipynb
@@ -59,6 +59,26 @@
     "\n",
     "<a href=\"https://www.youtube.com/watch?v=sMct2JvYDlE&list=PLeySRPnY35dG2UQ35tPsaVMYkQhc8Vp__&index=49\" target=\"_blank\">Derivadas de Orden Superior</a>\n",
     "\n",
+    "<hr>\n",
+    "\n",
+    "Derivadas Parciales\n",
+    "\n",
+    "<a href=\"https://www.youtube.com/watch?v=RdxXv3lFjls&list=PLeySRPnY35dEzFH6hn4bDJRPNbnVuevtS&index=1\" target=\"_blank\">Derivadas Parciales - Introducción</a>\n",
+    "\n",
+    "<a href=\"https://es.khanacademy.org/math/multivariable-calculus/multivariable-derivatives/partial-derivative-and-gradient-articles/a/the-gradient\" target=\"_blank\">Vector Gradiente - Definición Khan Academy</a>\n",
+    "\n",
+    "<a href=\"https://www.youtube.com/watch?v=Vnbi1S7x6Qg\" target=\"_blank\">Vector Gradiente (derivadas parciales)</a>\n",
+    "\n",
+    "<a href=\"https://www.youtube.com/watch?v=OSsH0YOh5oM\" target=\"_blank\">Matriz Jacobiana</a>\n",
+    "\n",
+    "<a href=\"https://www.youtube.com/watch?v=H3aGBaFgdpk\" target=\"_blank\">Matriz Hessiana</a>\n",
+    "\n",
+    "Integrales (pequeña introducción)\n",
+    "\n",
+    "Tener en cuenta que, para el caso de Machine Learning, lo que más nos interesará son las derivadas. Las integrales suelen aplciarse y resolverse más en lo relacionado al tema de probabilidad (tema que se encontrará en clases siguientes).\n",
+    "\n",
+    "<a href=\"https://www.youtube.com/watch?v=H3aGBaFgdpk\" target=\"_blank\">Teorema Fundamental del Cálculo</a>\n",
+    "\n",
     "</div>"
    ]
   },
