--- a/maths-for-ai/4_Funciones/Funciones_extra_info.ipynb
+++ b/maths-for-ai/4_Funciones/Funciones_extra_info.ipynb
@@ -73,6 +73,8 @@
     "\n",
     "<a href=\"https://www.youtube.com/watch?v=H3aGBaFgdpk\" target=\"_blank\">Matriz Hessiana</a>\n",
     "\n",
+    "<hr>\n",
+    "\n",
     "Integrales (pequeña introducción)\n",
     "\n",
     "Tener en cuenta que, para el caso de Machine Learning, lo que más nos interesará son las derivadas. Las integrales suelen aplciarse y resolverse más en lo relacionado al tema de probabilidad (tema que se encontrará en clases siguientes).\n",
@@ -80,6 +82,26 @@
     "<a href=\"https://www.youtube.com/watch?v=H3aGBaFgdpk\" target=\"_blank\">Teorema Fundamental del Cálculo</a>\n",
     "\n",
     "</div>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "2db377b5-5a69-4bd0-a52e-fcb475e05b4c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6cd59666-9bb5-4dce-9e69-142d0cb1a839",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "v = np.array"
    ]
   },
   {
