Atributos, metodos y funciones basicas de Pandas

--- a/maths-for-ai/3_Factorizacion/Factorizacion.ipynb
+++ b/maths-for-ai/3_Factorizacion/Factorizacion.ipynb
@@ -11,7 +11,9 @@
   {
    "cell_type": "markdown",
    "id": "b0d249c4-9501-4c34-89b5-39068bbf8b04",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "## ¿Qué es la factorización de matrices?"
    ]
@@ -33,7 +35,9 @@
   {
    "cell_type": "markdown",
    "id": "ebb4950c-e1a3-4771-84f5-3ba95c8e6578",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "## ¿Qué es un espacio vectorial?"
    ]
@@ -91,7 +95,9 @@
   {
    "cell_type": "markdown",
    "id": "6b2992dc-6e4f-422e-8f9f-fa596477377f",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "## ¿Qué es una transformación lineal?"
    ]
@@ -422,7 +428,9 @@
   {
    "cell_type": "markdown",
    "id": "faeb73a9-685c-4818-95cc-8fb244b71a89",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "## ¿Qué puede hacer una transformación lineal?"
    ]
@@ -736,7 +744,9 @@
   {
    "cell_type": "markdown",
    "id": "cbdba5cc-b6f8-43ea-8c8d-44db79a73646",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "## Preguntas que nos surgen a partir de lo visto:"
    ]
@@ -1016,7 +1026,9 @@
   {
    "cell_type": "markdown",
    "id": "32446911-6c02-4449-a565-b39ce881505b",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "## Composición de Funciones"
    ]
@@ -1142,7 +1154,9 @@
   {
    "cell_type": "markdown",
    "id": "7c2d9e88-48a4-462e-ad95-98829a7cb2cb",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "## ¿Existe una forma de representar las transformaciones lineales a partir de transformaciones básicas?"
    ]
@@ -2167,14 +2181,6 @@
     "print(\"Matriz V inversa/trasnpuesta\")\n",
     "print(VT)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b56671d9-80c5-4252-b970-51a6cc16834b",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
