--- a/maths-for-ai/2_Matrices/Matrices.ipynb
+++ b/maths-for-ai/2_Matrices/Matrices.ipynb
@@ -3701,13 +3701,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "796354c3-4501-4321-a09b-3e8bc4ecdc1f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'y' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[1], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m e_vec \u001b[38;5;241m=\u001b[39m \u001b[43my\u001b[49m \u001b[38;5;241m-\u001b[39m y_hat\n\u001b[1;32m      2\u001b[0m e_vec\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'y' is not defined"
+     ]
+    }
+   ],
    "source": [
-    "e_vec = y - y_hat\n"
+    "e_vec = y - y_hat\n",
+    "e_vec"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "449932ab-9195-416e-845e-dec3b3fa9c40",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
