Gradiente descendiente en Python

--- a/maths-for-ai/5_Optimizacion/Optimizacion.ipynb
+++ b/maths-for-ai/5_Optimizacion/Optimizacion.ipynb
@@ -1026,6 +1026,7 @@
     "plt.plot(x_n_example,y_n_example)\n",
     "\n",
     "plt.xlim(-1, 11)\n",
+    "plt.ylim(-0.2, 0.2)\n",
     "\n",
     "plt.grid(linewidth=0.3)\n",
     "\n",
