--- a/data-science/analisis-de-datos-Humai/02_Pivot_Table_y_Joins/clase-2-ejercicios.ipynb
+++ b/data-science/analisis-de-datos-Humai/02_Pivot_Table_y_Joins/clase-2-ejercicios.ipynb
@@ -13,24 +13,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 62,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/var/folders/ph/5sq6jlj161g1_2t838crnx6c0000gp/T/ipykernel_733/3238781833.py:1: DeprecationWarning: \n",
-      "Pyarrow will become a required dependency of pandas in the next major release of pandas (pandas 3.0),\n",
-      "(to allow more performant data types, such as the Arrow string type, and better interoperability with other libraries)\n",
-      "but was not found to be installed on your system.\n",
-      "If this would cause problems for you,\n",
-      "please provide us feedback at https://github.com/pandas-dev/pandas/issues/54466\n",
-      "        \n",
-      "  import pandas as pd\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
@@ -50,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
@@ -200,7 +185,7 @@
        "4          15        2500  "
       ]
      },
-     "execution_count": 11,
+     "execution_count": 64,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -218,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
@@ -227,13 +212,48 @@
        "(153889, 12)"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 65,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "estimaciones.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['id_provincia', 'provincia', 'id_departamento', 'departamento',\n",
+       "       'id_cultivo', 'cultivo', 'id_campaña', 'campaña', 'sup_sembrada',\n",
+       "       'sup_cosechada', 'produccion ', 'rendimiento'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 66,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "estimaciones.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "new_columns = {col: col.strip() for col in estimaciones.columns}\n",
+    "\n",
+    "# Renombrar las columnas del DataFrame\n",
+    "estimaciones = estimaciones.rename(columns=new_columns)"
    ]
   },
   {
@@ -257,10 +277,198 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 68,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['Ajo', 'Algodón', 'Alpiste', 'Arroz', 'Avena', 'Banana',\n",
+       "       'Caña de azúcar', 'Cártamo', 'Cebada cervecera',\n",
+       "       'Cebada forrajera', 'Cebolla total', 'Centeno', 'Girasol', 'Limón',\n",
+       "       'Lino', 'Maíz', 'Mandarina', 'Maní', 'Mijo', 'Naranja',\n",
+       "       'Papa total', 'Pomelo', 'Poroto seco', 'Soja total', 'Sorgo', 'Té',\n",
+       "       'Trigo total', 'Tung', 'Yerba mate', 'Trigo candeal', 'Colza',\n",
+       "       'Jojoba', 'Soja 1ra', 'Soja 2da', 'Cebada total', 'Poroto total',\n",
+       "       'Arveja', 'Garbanzo', 'Lenteja', 'Poroto alubia', 'Poroto negro',\n",
+       "       'Poroto otros'], dtype=object)"
+      ]
+     },
+     "execution_count": 68,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "estimaciones[\"cultivo\"].unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['1969/1970', '1970/1971', '1971/1972', '1972/1973', '1973/1974',\n",
+       "       '1974/1975', '1975/1976', '1976/1977', '1977/1978', '1978/1979',\n",
+       "       '1979/1980', '1980/1981', '1981/1982', '1982/1983', '1983/1984',\n",
+       "       '1984/1985', '1985/1986', '1986/1987', '1987/1988', '1988/1989',\n",
+       "       '1989/1990', '1990/1991', '1991/1992', '1992/1993', '1993/1994',\n",
+       "       '1994/1995', '1995/1996', '1996/1997', '1997/1998', '1998/1999',\n",
+       "       '1999/2000', '2000/2001', '2001/2002', '2002/2003', '2003/2004',\n",
+       "       '2004/2005', '2005/2006', '2006/2007', '2007/2008', '2008/2009',\n",
+       "       '2009/2010', '2010/2011', '2011/2012', '2012/2013', '2013/2014',\n",
+       "       '2014/2015', '2015/2016', '2016/2017', '2017/2018', '2018/2019',\n",
+       "       '2019/2020', '2020/2021', '2021/2022', '2022/2023'], dtype=object)"
+      ]
+     },
+     "execution_count": 69,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "estimaciones[\"campaña\"].unique()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Producción total anual"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "estimaciones[[\"campania_inicio\",\"campania_fin\"]] = estimaciones.campaña.str.split(\"/\", n=1,expand=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "estimaciones[\"campania_inicio\"] = estimaciones[\"campania_inicio\"].astype(int)\n",
+    "estimaciones[\"campania_fin\"] = estimaciones[\"campania_fin\"].astype(int)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/ph/5sq6jlj161g1_2t838crnx6c0000gp/T/ipykernel_568/789318932.py:2: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.\n",
+      "The behavior will change in pandas 3.0. This inplace method will never work because the intermediate object on which we are setting values always behaves as a copy.\n",
+      "\n",
+      "For example, when doing 'df[col].method(value, inplace=True)', try using 'df.method({col: value}, inplace=True)' or df[col] = df[col].method(value) instead, to perform the operation inplace on the original object.\n",
+      "\n",
+      "\n",
+      "  estimaciones[\"produccion\"].replace('SD', 0, inplace=True)\n"
+     ]
+    }
+   ],
+   "source": [
+    "estimaciones[\"produccion\"] = estimaciones[\"produccion\"].fillna(0)\n",
+    "estimaciones[\"produccion\"].replace('SD', 0, inplace=True)\n",
+    "# pasamos los valores a millones\n",
+    "estimaciones[\"produccion\"] = estimaciones.produccion.astype(int)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>produccion</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>campania_fin</th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2019</th>\n",
+       "      <td>203090043</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2020</th>\n",
+       "      <td>190846551</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2021</th>\n",
+       "      <td>187573928</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2022</th>\n",
+       "      <td>187668131</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2023</th>\n",
+       "      <td>120831981</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "              produccion\n",
+       "campania_fin            \n",
+       "2019           203090043\n",
+       "2020           190846551\n",
+       "2021           187573928\n",
+       "2022           187668131\n",
+       "2023           120831981"
+      ]
+     },
+     "execution_count": 74,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 1) ¿Cuál es la producción total en toneladas estimada de todos los cultivos en la Argentina, cada año?\n",
+    "prod_total_por_anio = estimaciones.pivot_table(\n",
+    "    index=[\"campania_fin\"],\n",
+    "    values=[\"produccion\"],\n",
+    "    aggfunc=\"sum\"\n",
+    ")\n",
+    "\n",
+    "prod_total_por_anio.sort_values(\"campania_fin\", ascending=False)\n",
+    "prod_total_por_anio.tail()"
+   ]
   },
   {
    "cell_type": "code",
