Ejercicios clase 2 introduccion a Python - listas y funciones

--- a/ptthon-basics-humai/02_Listas_y_Funciones/ejercicios/ejercicio.ipynb
+++ b/ptthon-basics-humai/02_Listas_y_Funciones/ejercicios/ejercicio.ipynb
@@ -28,25 +28,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/bin/bash: wget: command not found\n"
+     ]
+    }
+   ],
    "source": [
-    "!wget https://datasets-humai.s3.amazonaws.com/datasets/publicaciones.zip"
+    "!wget ./publicaciones.zip"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Archive:  publicaciones.zip\n",
+      "   creating: publicaciones/\n",
+      "  inflating: publicaciones/Yukon Delta Salmon Management.txt  \n",
+      "  inflating: publicaciones/The Citrus Solution Phase II.txt  \n",
+      "  inflating: publicaciones/Characterization of Iron Deposition in Recombinant Heteropolymer.txt  \n",
+      "  inflating: publicaciones/Using GIS Site Suitability Analysis to Study Adaptability.txt  \n"
+     ]
+    }
+   ],
    "source": [
     "!unzip publicaciones.zip"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,9 +85,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Characterization of Iron Deposition in Recombinant Heteropolymer.txt', 'The Citrus Solution Phase II.txt', 'Using GIS Site Suitability Analysis to Study Adaptability.txt', 'Yukon Delta Salmon Management.txt']\n"
+     ]
+    }
+   ],
    "source": [
     "print(archivos_directorio)"
    ]
@@ -84,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,9 +122,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['publicaciones/Characterization of Iron Deposition in Recombinant Heteropolymer.txt',\n",
+       " 'publicaciones/The Citrus Solution Phase II.txt',\n",
+       " 'publicaciones/Using GIS Site Suitability Analysis to Study Adaptability.txt',\n",
+       " 'publicaciones/Yukon Delta Salmon Management.txt']"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "rutas_archivos"
    ]
@@ -109,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -118,9 +161,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('publicaciones/Characterization of Iron Deposition in Recombinant Heteropolymer.txt', 'Characterization of Iron Deposition in Recombinant Heteropolymer.txt')\n",
+      "('publicaciones/The Citrus Solution Phase II.txt', 'The Citrus Solution Phase II.txt')\n",
+      "('publicaciones/Using GIS Site Suitability Analysis to Study Adaptability.txt', 'Using GIS Site Suitability Analysis to Study Adaptability.txt')\n",
+      "('publicaciones/Yukon Delta Salmon Management.txt', 'Yukon Delta Salmon Management.txt')\n"
+     ]
+    }
+   ],
    "source": [
     "for tupla in tuplas_archivos:\n",
     "    print(tupla)"
@@ -136,20 +190,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 1. Escribir la función "
+    "# 1. Escribir la función \n",
+    "def contar_palabras_archivo(tupla):\n",
+    "    with open(tupla[0], 'r') as f:\n",
+    "        contenido = contenido = f.read().split(\" \")\n",
+    "    cantidad_palabras = len(contenido)\n",
+    "    return (tupla[1], cantidad_palabras)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Nombre archivo: Characterization of Iron Deposition in Recombinant Heteropolymer.txt - Cantidad de palabras: 217\n",
+      "Nombre archivo: The Citrus Solution Phase II.txt - Cantidad de palabras: 519\n",
+      "Nombre archivo: Using GIS Site Suitability Analysis to Study Adaptability.txt - Cantidad de palabras: 134\n",
+      "Nombre archivo: Yukon Delta Salmon Management.txt - Cantidad de palabras: 109\n"
+     ]
+    }
+   ],
    "source": [
-    "# 2. Recorrer en un loop tuplas_archivos invocando a la función"
+    "# 2. Recorrer en un loop tuplas_archivos invocando a la función\n",
+    "for arch in tuplas_archivos:\n",
+    "    resul = contar_palabras_archivo(arch)\n",
+    "    print(f\"Nombre archivo: {resul[0]} - Cantidad de palabras: {resul[1]}\")"
    ]
   },
   {
@@ -161,20 +234,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 3. Modifiquen la función"
+    "# 3. Modifiquen la función\n",
+    "def contar_palabras_archivo(tupla):\n",
+    "    with open(tupla[0], 'r') as f:\n",
+    "        contenido = contenido = f.read().split(\" \")\n",
+    "    cantidad_palabras = len(contenido)\n",
+    "    return (tupla[1], cantidad_palabras > 250)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Nombre archivo: Characterization of Iron Deposition in Recombinant Heteropolymer.txt - Supera las 250 palabras: False\n",
+      "Nombre archivo: The Citrus Solution Phase II.txt - Supera las 250 palabras: True\n",
+      "Nombre archivo: Using GIS Site Suitability Analysis to Study Adaptability.txt - Supera las 250 palabras: False\n",
+      "Nombre archivo: Yukon Delta Salmon Management.txt - Supera las 250 palabras: False\n"
+     ]
+    }
+   ],
    "source": [
-    "#4. Vuelvan a llamarla"
+    "#4. Vuelvan a llamarla\n",
+    "for arch in tuplas_archivos:\n",
+    "    resul = contar_palabras_archivo(arch)\n",
+    "    print(f\"Nombre archivo: {resul[0]} - Supera las 250 palabras: {resul[1]}\")"
    ]
   },
   {
@@ -187,9 +279,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "conda_python3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "conda_python3"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -201,7 +293,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.10"
+   "version": "3.12.0"
   }
  },
  "nbformat": 4,
