--- a/ptthon-basics-humai/02_Listas_y_Funciones/ejercicios/adicionales.ipynb
+++ b/ptthon-basics-humai/02_Listas_y_Funciones/ejercicios/adicionales.ipynb
@@ -19,17 +19,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/bin/bash: wget: command not found\n",
+      "Archive:  test_intro_clase2.zip\n",
+      "  inflating: README.txt              \n",
+      "   creating: test/\n",
+      "  inflating: test/borges1.txt        \n",
+      "  inflating: test/borges1_encriptado_6.txt  \n",
+      "  inflating: test/borges1_encriptado_6_cap.txt  \n",
+      "  inflating: test/borges2.txt        \n",
+      "  inflating: test/borges2_encriptado_11.txt  \n",
+      "  inflating: test/borges2_encriptado_11_cap.txt  \n",
+      "  inflating: test.py                 \n"
+     ]
+    }
+   ],
    "source": [
-    "!wget https://datasets-humai.s3.amazonaws.com/datasets/test_intro_clase2.zip\n",
+    "!wget ./test_intro_clase2.zip\n",
     "!unzip test_intro_clase2.zip"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,22 +73,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Corre para ver si tu código esta bien\n",
     "def informe_espia(tira_numeros):\n",
-    "    # Hacer la magia\n",
-    "    \n",
+    "    lista = tira_numeros.split(\"-\")\n",
+    "    cuartel = int(lista.pop())\n",
+    "    lista = [int(num) for num in lista]\n",
+    "    informe = sum([num for num in lista if num % cuartel == 0])\n",
     "    return (cuartel,informe)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Salio todo piola\n"
+     ]
+    }
+   ],
    "source": [
     "test1(informe_espia)"
    ]
@@ -224,7 +252,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -238,7 +266,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.12.0"
   }
  },
  "nbformat": 4,
