Ejercicios clase 2 intro a python Humai y se agregan temas clase 3

--- a/python-basics-humai/02_Listas_y_Funciones/ejercicios/adicionales.ipynb
+++ b/python-basics-humai/02_Listas_y_Funciones/ejercicios/adicionales.ipynb
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -136,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -144,18 +144,74 @@
     "    # Un ayudin\n",
     "    abecedario = 'abcdefghijklmnñopqrstuvwxyz'\n",
     "    # Ahora hagan su magia (ojo con las mayúsculas)\n",
-    "\n",
+    "    cifrado = \"\"\n",
+    "    with open(mensaje_path, 'r') as f:\n",
+    "        contenido = f.read()\n",
+    "    for letra in contenido:\n",
+    "        if letra.lower() in abecedario:\n",
+    "            index = abecedario.index(letra.lower())\n",
+    "            cifrado += abecedario[(index + clave) % len(abecedario)]\n",
+    "        else:\n",
+    "            cifrado += letra\n",
     "    return cifrado"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "¡Mensaje encriptado correctamente! Son hackers.\n"
+     ]
+    }
+   ],
    "source": [
     "# Corre para ver si tu código esta bien\n",
     "test2(codificador_cesar)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def codificador_cesar_mayus(mensaje_path, clave):\n",
+    "    # Un ayudin\n",
+    "    abecedario = 'abcdefghijklmnñopqrstuvwxyz'\n",
+    "    # Ahora hagan su magia (ojo con las mayúsculas)\n",
+    "    cifrado = \"\"\n",
+    "    with open(mensaje_path, 'r') as f:\n",
+    "        contenido = f.read()\n",
+    "    for letra in contenido:\n",
+    "        if letra.lower() in abecedario:\n",
+    "            index = abecedario.index(letra.lower())\n",
+    "            letra_cifrada = abecedario[(index + clave) % len(abecedario)]\n",
+    "            cifrado += letra_cifrada.upper() if letra.isupper() else letra_cifrada\n",
+    "        else:\n",
+    "            cifrado += letra\n",
+    "    return cifrado"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "¡Mensaje encriptado correctamente! Son hackers.\n"
+     ]
+    }
+   ],
+   "source": [
+    "test2_mayusculas(codificador_cesar_mayus)"
    ]
   },
   {
@@ -182,7 +238,7 @@
     "Ej:\n",
     "``` Python\n",
     "INPUT:\n",
-    "['Unicornio','Oso','Jirafa', 'Pato'. 'Elefante'], movimiento = 1\n",
+    "['Unicornio','Oso','Jirafa', 'Pato', 'Elefante'], movimiento = 1\n",
     "OUTPUT:\n",
     "['Elefante', 'Unicornio', 'Oso', 'Jirafa', 'Pato']\n",
     "```"
@@ -190,21 +246,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
     "def probar_calesita(calesita, n_movimientos):\n",
     "    # Proba la calesita\n",
-    "    \n",
+    "    calesita_girada = list(range(len(calesita)))\n",
+    "    for n in calesita:\n",
+    "        index = calesita.index(n)\n",
+    "        new_index = (index + n_movimientos) % len(calesita)\n",
+    "        calesita_girada[new_index] = n\n",
     "    return calesita_girada"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "¡La calesita anda!\n"
+     ]
+    }
+   ],
    "source": [
     "# Corre para ver si tu código esta bien\n",
     "test3(probar_calesita)"
@@ -221,7 +289,7 @@
     "Ej:\n",
     "```Python\n",
     "INPUT:\n",
-    "['Unicornio','Oso','Jirafa', 'Pato'. 'Elefante'], animal_quitar = 'JIRAFA', movimientos = 1\n",
+    "['Unicornio','Oso','Jirafa', 'Pato', 'Elefante'], animal_quitar = 'JIRAFA', movimientos = 1\n",
     "OUTPUT:\n",
     "['Elefante', 'Unicornio', 'Oso', 'Pato']\n",
     "```"
@@ -229,14 +297,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
     "def probar_calesita_arreglada(calesita, n_mov, animal_quitar):\n",
     "    # Arregla la calesita\n",
-    "    \n",
+    "    calesita_arreglada = probar_calesita(calesita, n_mov)\n",
+    "    animal_quitar = animal_quitar.title()\n",
+    "    index = calesita_arreglada.index(animal_quitar)\n",
+    "    calesita_arreglada.pop(index)\n",
     "    return calesita_arreglada"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AssertionError",
+     "evalue": "error con rotar 11 veces la calesita: ['Gatito', 'Ornitorrinco', 'Vaca', 'Elefante', 'Pato']",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAssertionError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[36], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m# Corre para ver si tu código esta bien\u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m \u001b[43mtest4\u001b[49m\u001b[43m(\u001b[49m\u001b[43mprobar_calesita_arreglada\u001b[49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[0;32m~/Desktop/REP/python-courses/ptthon-basics-humai/02_Listas_y_Funciones/ejercicios/test.py:56\u001b[0m, in \u001b[0;36mtest4\u001b[0;34m(mi_funcion)\u001b[0m\n\u001b[1;32m     54\u001b[0m rotacion1_2 \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m3\u001b[39m\n\u001b[1;32m     55\u001b[0m rotacion1_3 \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m0\u001b[39m\n\u001b[0;32m---> 56\u001b[0m \u001b[38;5;28;01massert\u001b[39;00m mi_funcion(caso_1, rotacion1_1, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mGatito\u001b[39m\u001b[38;5;124m'\u001b[39m) \u001b[38;5;241m==\u001b[39m [\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mVaca\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mElefante\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mPato\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mOrnitorrinco\u001b[39m\u001b[38;5;124m'\u001b[39m], \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124merror con rotar \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mrotacion1_1\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m veces la calesita: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mcaso_1\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m     57\u001b[0m \u001b[38;5;28;01massert\u001b[39;00m mi_funcion(caso_1, rotacion1_2, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mPato\u001b[39m\u001b[38;5;124m'\u001b[39m) \u001b[38;5;241m==\u001b[39m [\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mOrnitorrinco\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mVaca\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mElefante\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mGatito\u001b[39m\u001b[38;5;124m'\u001b[39m], \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124merror con rotar \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mrotacion1_2\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m veces la calesita: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mcaso_1\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m     58\u001b[0m \u001b[38;5;28;01massert\u001b[39;00m mi_funcion(caso_1, rotacion1_3, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mVaca\u001b[39m\u001b[38;5;124m'\u001b[39m) \u001b[38;5;241m==\u001b[39m [\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mGatito\u001b[39m\u001b[38;5;124m'\u001b[39m,\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mOrnitorrinco\u001b[39m\u001b[38;5;124m'\u001b[39m,\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mElefante\u001b[39m\u001b[38;5;124m'\u001b[39m,\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mPato\u001b[39m\u001b[38;5;124m'\u001b[39m], \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124merror con rotar \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mrotacion1_3\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m veces la calesita: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mcaso_1\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m\n",
+      "\u001b[0;31mAssertionError\u001b[0m: error con rotar 11 veces la calesita: ['Gatito', 'Ornitorrinco', 'Vaca', 'Elefante', 'Pato']"
+     ]
+    }
+   ],
+   "source": [
+    "# Corre para ver si tu código esta bien\n",
+    "test4(probar_calesita_arreglada)"
    ]
   },
   {
@@ -244,10 +338,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# Corre para ver si tu código esta bien\n",
-    "test4(probar_calesita_arreglada)"
-   ]
+   "source": []
   }
  ],
  "metadata": {
